Time: 102 ms (34.83%) | Memory: 225.7 MB (47.70%) - LeetSync